# deepseek-quiz-gen

./: .env.example  .gitignore  README.md  providers.json  pyproject.toml  requirements.txt  run_cli.py  run_web.py  start.ps1
src/: __init__.py  cli.py  generator.py  prompt.py  provider_config.py  web.py
src/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai_compatible.py
src/templates/: index.html
